Update to the CV -Profile picture update -header fixed position on top -fixed relative position on workexperience and others

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 
 <!--
 This is an HTML document. It contains information about how elements in the website
@@ -15,6 +15,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 <scripts> for JavaScript files to build interactions.
 -->
 <head>
+  <meta charset="utf-8"/>
   <link href="css/style.css" rel="stylesheet" type="text/css"></link>
 
   <!--
@@ -38,7 +39,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   Uncomment the <script> tag below when you're ready to add an interactive
   Google Map to your resume!
   -->
-  <!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyC9uRHWYaUnMwhrC7-XobBzjfqrtXIWZVU"></script>
 
   <meta name="viewport" content="width=device-width">
 </head>
@@ -51,7 +52,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     display by looking at the id or at what's written between the <h2> tags.
     -->
     <div id="header" class="center-content clearfix">
-      <ul id="topContacts" class='flex-box'></ul>
+      <ul id="topContacts" class='flex-box'>Contact information:</ul>
     </div>
     <div style='clear: both;'></div>
     <div id="workExperience" class='gray'>
