body changed to unresolved

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <script src="js/jQuery.js"></script>
   <!-- More on helper.js in the class -->
   <script src="js/helper.js"></script>
-
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive
   Google Map to your resume!
@@ -43,7 +42,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 
   <meta name="viewport" content="width=device-width">
 </head>
-<body unresolved>
+<body>
   <div id="main"> 
     <!--
     Everything from here to the <script> tag below is the skeleton of your
