Added duration callculation in ro

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   Google Map to your resume!
   -->
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyC9uRHWYaUnMwhrC7-XobBzjfqrtXIWZVU"></script>
+  <!--
+  moment duration format script
+  -->
+  <script src="js/moment.js"></script>
+
+  <script src="js/moment-duration-format.js"></script>
+  
 
   <meta name="viewport" content="width=device-width">
 </head>
