--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     display by looking at the id or at what's written between the <h2> tags.
     -->
     <div id="header" class="center-content clearfix">
-      <ul id="topContacts" class='flex-box'>Contact information:</ul>
+      <ul id="topContacts" class='flex-box'>Informații de contact:</ul>
     </div>
     <div style='clear: both;'></div>
     <div id="workExperience" class='gray'>
-      <h2>Work Experience</h2>
+      <h2>Experiență</h2>
     </div>
     <div id="projects">
-      <h2>Projects</h2>
+      <h2>Proiecte</h2>
     </div>
     <div id="education" class='gray'>
-      <h2>Education</h2>
+      <h2>Studii</h2>
     </div>
     <div id="mapDiv">
-      <h2>Where I've Lived and Worked</h2>
+      <h2>Unde am locuit și lucrat</h2>
     </div>
     <div id="letsConnect" class='dark-gray'>
       <h2 class='orange center-text'>Let's Connect</h2>
