--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <meta charset="utf-8">
 
   <!-- Tells the browser what the title of this page should be. -->
-  <title>Resume</title>
+  <title>CV Istrate Adrian</title>
 
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet">
@@ -49,16 +49,16 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     </div>
     <div style="clear: both;"></div>
     <div id="workExperience" class="gray">
-      <h2>Work Experience</h2>
+      <h2>Experiență</h2>
     </div>
     <div id="projects">
-      <h2>Projects</h2>
+      <h2>Proiecte</h2>
     </div>
     <div id="education" class="gray">
-      <h2>Education</h2>
+      <h2>Educație</h2>
     </div>
     <div id="mapDiv">
-      <h2>Where I've Lived and Worked</h2>
+      <h2>Unde am lucrat și locuit</h2>
     </div>
     <div id="lets-connect" class="dark-gray">
       <h2 class="orange center-text">Let's Connect</h2>
